[gd_scene load_steps=16 format=3 uid="uid://cpv6ijkd46urq"]

[ext_resource type="Script" path="res://Scenes/council.gd" id="1_5dr63"]
[ext_resource type="Texture2D" uid="uid://jpsgkl1t6qem" path="res://Assets/Characters/indian-peasant-for-a-visual-novel-game-half-body.png" id="1_n2oid"]
[ext_resource type="Texture2D" uid="uid://cf7kmjkt3jbx8" path="res://Assets/Characters/indian-peasant-for-a-visual-novel-game-half-body (2).png" id="2_5kkij"]
[ext_resource type="Texture2D" uid="uid://by8ol20l6usir" path="res://Assets/Characters/indian-peasant-for-a-visual-novel-game-half-body (1).png" id="3_hr7db"]
[ext_resource type="Texture2D" uid="uid://iug3hsyvhm0t" path="res://Assets/Characters/indian-jester-for-a-visual-novel-game-half-body.png" id="4_hfn3n"]
[ext_resource type="Texture2D" uid="uid://d53d6kk1s2i8" path="res://Assets/Characters/indian-character-from-king-era-for-a-visual-novel-.png" id="5_3tpy8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cylmp"]
texture = ExtResource("1_n2oid")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1aeq"]
bg_color = Color(0.184314, 0.639216, 0.462745, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhqsu"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.12549, 0.427451, 0.419608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_35i3t"]
bg_color = Color(0.67451, 0.223529, 0.168627, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.435294, 0.105882, 0.113725, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_luw0l"]
texture = ExtResource("2_5kkij")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bbfck"]
texture = ExtResource("3_hr7db")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t1qpp"]
texture = ExtResource("4_hfn3n")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xw81q"]
bg_color = Color(0.67451, 0.223529, 0.168627, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 5
border_color = Color(0.435294, 0.105882, 0.113725, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yo7pa"]
texture = ExtResource("5_3tpy8")

[node name="Council" type="CanvasLayer"]
script = ExtResource("1_5dr63")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 5184.0
offset_bottom = 676.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
theme_override_constants/separation = 190

[node name="Advisor" type="Panel" parent="HBoxContainer2"]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_cylmp")

[node name="Label" type="Label" parent="HBoxContainer2/Advisor"]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 0
offset_top = 1000.0
offset_right = 1000.0
offset_bottom = 1200.0
theme_override_font_sizes/font_size = 140
theme_override_styles/normal = SubResource("StyleBoxFlat_h1aeq")
text = "Advisor"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer2/Advisor"]
layout_mode = 0
offset_top = 1200.0
offset_right = 1000.0
offset_bottom = 2200.0
theme_override_colors/default_color = Color(0.933333, 0.815686, 0.486275, 1)
theme_override_font_sizes/normal_font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_vhqsu")
text = "Good at Strategy and Guidance"

[node name="AdvisorSelect" type="Button" parent="HBoxContainer2/Advisor"]
layout_mode = 0
offset_top = 1925.0
offset_right = 1000.0
offset_bottom = 2200.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = SubResource("StyleBoxFlat_35i3t")
text = "Select"

[node name="Astrologer" type="Panel" parent="HBoxContainer2"]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_luw0l")

[node name="Label" type="Label" parent="HBoxContainer2/Astrologer"]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 0
offset_top = 1000.0
offset_right = 1000.0
offset_bottom = 1200.0
theme_override_font_sizes/font_size = 140
theme_override_styles/normal = SubResource("StyleBoxFlat_h1aeq")
text = "Astrologer"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer2/Astrologer"]
layout_mode = 0
offset_top = 1200.0
offset_right = 1000.0
offset_bottom = 2200.0
theme_override_colors/default_color = Color(0.933333, 0.815686, 0.486275, 1)
theme_override_font_sizes/normal_font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_vhqsu")
text = "Good at Predictions"

[node name="AstroSelect" type="Button" parent="HBoxContainer2/Astrologer"]
layout_mode = 0
offset_top = 1925.0
offset_right = 1000.0
offset_bottom = 2200.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = SubResource("StyleBoxFlat_35i3t")
text = "Select"

[node name="Doctor" type="Panel" parent="HBoxContainer2"]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bbfck")

[node name="Label" type="Label" parent="HBoxContainer2/Doctor"]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 0
offset_top = 1000.0
offset_right = 1000.0
offset_bottom = 1200.0
theme_override_font_sizes/font_size = 140
theme_override_styles/normal = SubResource("StyleBoxFlat_h1aeq")
text = "Doctor"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer2/Doctor"]
layout_mode = 0
offset_top = 1200.0
offset_right = 1000.0
offset_bottom = 2200.0
theme_override_colors/default_color = Color(0.933333, 0.815686, 0.486275, 1)
theme_override_font_sizes/normal_font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_vhqsu")
text = "Good with Scientific Problems"

[node name="DocSelect" type="Button" parent="HBoxContainer2/Doctor"]
layout_mode = 0
offset_top = 1925.0
offset_right = 1000.0
offset_bottom = 2200.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = SubResource("StyleBoxFlat_35i3t")
text = "Select"

[node name="Jester" type="Panel" parent="HBoxContainer2"]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_t1qpp")

[node name="Label" type="Label" parent="HBoxContainer2/Jester"]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 0
offset_top = 1000.0
offset_right = 1000.0
offset_bottom = 1200.0
theme_override_font_sizes/font_size = 140
theme_override_styles/normal = SubResource("StyleBoxFlat_h1aeq")
text = "Jester"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer2/Jester"]
layout_mode = 0
offset_top = 1200.0
offset_right = 1000.0
offset_bottom = 2200.0
theme_override_colors/default_color = Color(0.933333, 0.815686, 0.486275, 1)
theme_override_font_sizes/normal_font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_vhqsu")
text = "Good at Disguise and Information Gathering"

[node name="Jest Select" type="Button" parent="HBoxContainer2/Jester"]
layout_mode = 0
offset_top = 1925.0
offset_right = 1000.0
offset_bottom = 2200.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = SubResource("StyleBoxFlat_xw81q")
text = "Select
"

[node name="Warrior" type="Panel" parent="HBoxContainer2"]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_yo7pa")

[node name="Label" type="Label" parent="HBoxContainer2/Warrior"]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 0
offset_top = 1000.0
offset_right = 1000.0
offset_bottom = 1200.0
theme_override_font_sizes/font_size = 140
theme_override_styles/normal = SubResource("StyleBoxFlat_h1aeq")
text = "Warrior"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer2/Warrior"]
layout_mode = 0
offset_top = 1200.0
offset_right = 1000.0
offset_bottom = 2200.0
theme_override_colors/default_color = Color(0.933333, 0.815686, 0.486275, 1)
theme_override_font_sizes/normal_font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_vhqsu")
text = "Good with Weapons"

[node name="WarSelect" type="Button" parent="HBoxContainer2/Warrior"]
layout_mode = 0
offset_top = 1925.0
offset_right = 1000.0
offset_bottom = 2200.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = SubResource("StyleBoxFlat_35i3t")
text = "Select"

[connection signal="pressed" from="HBoxContainer2/Advisor/AdvisorSelect" to="." method="_on_advisor_select_pressed"]
[connection signal="pressed" from="HBoxContainer2/Astrologer/AstroSelect" to="." method="_on_astro_select_pressed"]
[connection signal="pressed" from="HBoxContainer2/Doctor/DocSelect" to="." method="_on_doc_select_pressed"]
[connection signal="toggled" from="HBoxContainer2/Doctor/DocSelect" to="." method="_on_doc_select_toggled"]
[connection signal="pressed" from="HBoxContainer2/Jester/Jest Select" to="." method="_on_jest_select_pressed"]
[connection signal="pressed" from="HBoxContainer2/Warrior/WarSelect" to="." method="_on_war_select_pressed"]
